--- a/.github/workflows/yaxp-cli-cd.yml
+++ b/.github/workflows/yaxp-cli-cd.yml
@@ -188,7 +188,7 @@ jobs:
 
   release:
     # needs: [build-linux-x64]
-    needs: [build-linux-x64, build-linux-arm64, build-linux-armv7, build-windows-x64, build-macos-arm64]
+    needs: [build-linux-x64, build-linux-arm64, build-windows-x64, build-macos-arm64]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
