--- a/.github/workflows/yaxp-cli-cd.yml
+++ b/.github/workflows/yaxp-cli-cd.yml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Rust
-        uses: actions-rs/toolchain@v1
+        uses: actions/setup-rust@v1
         with:
           toolchain: stable
           target: aarch64-unknown-linux-gnu
